projet_gl/src/test/deca/syntax/invalid/listDeclVar/incorrectInitialization2.deca
// Description:
//    invalid test parser for Initialization.
//
// Resultats:
//   ligne 12 : mismatched input '||' expecting {'true', 'new', 'null', 'readInt', 'false', 'readFloat', 'this', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//
//
// Historique:
//    cree le 13/01/2024

{
    int x = ||;
}